; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freemodbus/modbus/extr_mb.c_eMBEnable.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freemodbus/modbus/extr_mb.c_eMBEnable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MB_ENOERR = common dso_local global i32 0, align 4
@eMBState = common dso_local global i64 0, align 8
@STATE_DISABLED = common dso_local global i64 0, align 8
@STATE_ENABLED = common dso_local global i64 0, align 8
@MB_EILLSTATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @eMBEnable() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @MB_ENOERR, align 4
  store i32 %2, i32* %1, align 4
  %3 = load i64, i64* @eMBState, align 8
  %4 = load i64, i64* @STATE_DISABLED, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = call i32 (...) @pvMBFrameStartCur()
  %8 = load i64, i64* @STATE_ENABLED, align 8
  store i64 %8, i64* @eMBState, align 8
  br label %11

9:                                                ; preds = %0
  %10 = load i32, i32* @MB_EILLSTATE, align 4
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %9, %6
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @pvMBFrameStartCur(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
